# unattended-kvm-install

./: Cargo.toml  README.md
.github/workflows/: build.yaml
src/: batch_install.rs  createvm.rs  kickstart.rs  main.rs  options_from_csv.rs  passwd.rs  runall.rs
testdata/: global.txt  id_rsa  id_rsa.pub  list.csv
