[package]
name = "unattended-kvm-install"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["derive", "cargo"] }
csv = "1.2.2"
regex = "1.9.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha-crypt = "0.5.0"
tempfile = "3.8.0"
termion = "4.0.5"
